tests/do/tmp/04_invalid_list_literal.stderr
error[InvalidListLiteral]: List 字面量语法无效
 --> /._/do/tests/do/cases/err/04_invalid_list_literal.do:2:21
 hint: List 字面量只允许表达式列表, 不允许 `k:v`.
 2 |     xs = List<i32>{1: 2}
   |                     ^
